--- a/style.css
+++ b/style.css
@@ -2,4 +2,84 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: helvetica;
+}
 
+header {
+  background-color: black;
+  height: 100px;
+  width: 100%;
+}
+
+nav {
+  width: 960px;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+}
+
+nav>ul {
+  display: flex;
+  justify-content: space-between;
+  width: 65%;
+  margin-left: 30px;
+  padding: 10px;
+}
+
+nav>ul>li {
+  color: white;
+  width: 100px;
+}
+
+main {
+  width: 960px;
+  margin: 0 auto;
+}
+
+.hero {
+  margin: 30px auto;
+}
+
+.threeGrid {
+display: flex;
+justify-content: space-between;
+margin-bottom: 30px;
+}
+
+.ctr2 {
+  display: flex;
+  margin-bottom: 30px;
+  height: 400px;
+}
+
+.ctr2>div {
+  padding: 5px 20px;
+  overflow: auto;
+}
+
+.ctr2>div>h3 {
+  font-weight: bold;
+  font-size: 2em;
+  padding-bottom: 20px;
+}
+.ctr2>div>p {
+  padding-bottom: 20px;
+  line-height: 1.2;
+}
+
+button {
+  background-color: black;
+  color: white;
+  width: 50%;
+  height: 40px;
+  font-size: 1.3em;
+  border-radius: 10px;
+}
+
+footer {
+  background-color: black;
+  height: 100px;
+  width: 100%;
+}
